--- a/app/src/free/res/layout/fragment_main_activity.xml
+++ b/app/src/free/res/layout/fragment_main_activity.xml
@@ -1,36 +1,34 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivityFragment">
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
+    tools:context="com.udacity.gradle.builditbigger.free.MainActivityFragment">
 
     <TextView
+        android:id="@+id/instructions_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/instructions_text_view"
-        android:text="@string/instructions"
-        />
+        android:text="@string/instructions" />
 
     <Button
+        android:id="@+id/tellTheJoke"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/instructions_text_view"
-        android:text="@string/button_text"
         android:onClick="tellJoke"
-        />
+        android:text="@string/button_text"
+        tools:ignore="OnClick"
+        android:layout_marginBottom="@dimen/margin_20"/>
+
 
     <com.google.android.gms.ads.AdView
         android:id="@+id/adView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
         ads:adSize="BANNER"
-        ads:adUnitId="@string/banner_ad_unit_id">
-    </com.google.android.gms.ads.AdView>
+        ads:adUnitId="@string/banner_ad_unit_id" />
 
 </RelativeLayout>
